--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ui-theme-template",
+  "name": "p-h-passion-light-ui",
   "theme": "ui",
-  "version": "0.0.0",
-  "description": "A short description of your UI theme",
+  "version": "1.0.0",
+  "description": "An atom ui theme based off of warm tone php colours.",
   "keywords": [
     "ui",
     "theme"
   ],
-  "repository": "https://github.com/atom-community/ui-theme-template",
+  "repository": "https://github.com/jacobsteves/PHPassion-Light-UI",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
